# indicator-session

./: CMakeLists.txt  INSTALL
data/: CMakeLists.txt  com.canonical.indicator.session  com.canonical.indicator.session.gschema.xml.in  indicator-session.conf.in  indicator-session.service.in
data/icons/: CMakeLists.txt
debian/: changelog  control  indicator-session.links  indicator-session.maintscript  rules
po/: CMakeLists.txt  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fur.po  fy.po  gd.po  gl.po  gu.po  (+62 more)
src/: CMakeLists.txt  actions.c  actions.h  service.c
src/backend-dbus/: CMakeLists.txt  actions.c
tests/: CMakeLists.txt
tests/backend-dbus/: CMakeLists.txt
